Remove StatementsCollection